<resources>
    <string name="app_name">POI App</string>
    <string name="action_settings">Settings</string>
    <string name="poi_shared_prefs">poi_shared_prefs</string>
    <string name="save">Save</string>
    <string name="coordinates">Coordinates</string>
    <string name="geocode">Geocode</string>
    <string name="get_gps">Get GPS</string>
    <string name="title_activity_all_poi">All POIs</string>
    <string name="title_activity_detail_poi">POI Details</string>
    <string name="title_activity_new_poi">New POI</string>
    <string name="gps">GPS</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="mypoi">MyPOI</string>
</resources>
