<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.fhj.mappdev.poiapp.DetailPoiActivity">

    <TextView
        android:id="@+id/lbCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/coordinates" />

    <EditText
        android:id="@+id/tfCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbCoordinates"
        android:hint="@string/coordinates" />

    <TextView
        android:id="@+id/lbAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfCoordinates"
        android:layout_marginTop="50dp"
        android:text="@string/address" />

    <EditText
        android:id="@+id/tfAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbAddress"
        android:hint="@string/address" />

    <Button
        android:id="@+id/btnSavePoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="25dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnDeletePoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSavePoi"
        android:padding="25dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnShowPoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnDeletePoi"
        android:padding="25dp"
        android:text="@string/show" />


</android.widget.RelativeLayout>
